# senzing-databricks

./: .gitignore  .project  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  spark_quickstart.ipynb  spark_streaming.ipynb
.github/: CODEOWNERS
.github/workflows/: README.md  add-to-project-g2-python-dependabot.yaml  add-to-project-g2-python.yaml  bandit.yaml  black.yaml  check-development-dependencies.yaml  create-sphinx-documentation.yaml  dependency-scan.yaml  flake8.yaml  isort.yaml  mypy.yaml  pylint.yaml
