[project]
name = "senzing-databricks"
version = "1.2.9"
description = "Senzing integration in Databricks Spark workflows"
authors = [{ name = "senzing", email = "support@senzing.com" }]
readme = "README.md"
requires-python = ">=3.13"

license = "Apache-2.0"
license-files = [
  "LICENSE",
  ".github/senzing-corporate-contributor-license-agreement.pdf",
  ".github/senzing-individual-contributor-license-agreement.pdf",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "senzing_grpc == 0.5.13",
  "pyspark >= 4.0",

  "icecream >= 2.1",
  "ipywidgets >= 8.1",
  "jupyterlab >= 4.4",
  "jupyterlab-execute-time >= 3.2.0",
  "watermark >= 2.5",
]

[project.urls]
bugtracker = "https://github.com/senzing-garage/senzing-databricks/issues"
changelog = "https://github.com/senzing-garage/senzing-databricks/blob/main/CHANGELOG.md"
source = "https://github.com/senzing-garage/senzing-databricks"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
all = [
  { include-group = "development" },
  { include-group = "documentation" },
  { include-group = "lint" },
  { include-group = "test" },
]
development = [
  "icecream >= 2.1",
  "ipywidgets >= 8.1",
  "jupyterlab >= 4.4",
  "jupyterlab-execute-time >= 3.2.0",
  "pyspark >= 4.0",
  "senzing_grpc == 0.5.13",
  "watermark >= 2.5",
]
documentation = [
  "autodocsumm",
  "myst_parser",
  "sphinx-autodoc-typehints",
  "sphinx-gallery",
  "sphinx-jinja2-compat",
  "sphinx-prompt",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinx",
  "sphinxcontrib-applehelp",
  "sphinxcontrib-devhelp",
  "sphinxcontrib-htmlhelp",
  "sphinxcontrib-jquery",
  "sphinxcontrib-jsmath",
  "sphinxcontrib-qthelp",
  "sphinxcontrib-serializinghtml",
  "sphinxext-remoteliteralinclude",
]
lint = [
  "bandit==1.8.6; python_version <= '3.11'",
  "bandit==1.9.3; python_version > '3.11'",
  "black==25.11.0; python_version <= '3.11'",
  "black==26.1.0; python_version > '3.11'",
  "flake8==7.3.0",
  "isort==6.1.0; python_version <= '3.11'",
  "isort==7.0.0; python_version > '3.11'",
  "mypy==1.19.1",
  "nbqa==1.9.1",
  "nbqa[toolchain]==1.9.1",
  "pylint-per-file-ignores==2.0.3; python_version <= '3.11'",
  "pylint-per-file-ignores==3.2.0; python_version > '3.11'",
  "pylint==3.3.9; python_version <= '3.11'",
  "pylint==4.0.4; python_version > '3.11'",
  "types_grpcio >= 1.0",
  "types_requests >= 2.32",
]
test = [
  "pytest==8.4.2; python_version <= '3.11'",
  "pytest==9.0.2; python_version > '3.11'",
  "coverage==7.10.7; python_version <= '3.11'",
  "coverage==7.13.2; python_version > '3.11'",
]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "senzing_abstract.szengineflags.*"
ignore_missing_imports = "true"
warn_unused_ignores = "false"

[[tool.mypy.overrides]]
module = "pytest_schema.*"
ignore_missing_imports = "true"

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [
  "broad-except",
  "consider-using-f-string",
  "duplicate-code",
  "line-too-long",
  "missing-module-docstring",
  "too-many-branches",
  "too-many-locals",
]

good-names = ["senzing-databricks"]
ignore = ["__init__.py", "docs/source/conf.py"]
notes = ["FIXME"]

[tool.setuptools]
py-modules = []
